updating dev features